--- a/index.html
+++ b/index.html
@@ -601,22 +601,12 @@ body, #sidebar, #basemap-switcher {
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
+  <script src="firebase-init.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
   <script src="emoji-list.js"></script>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBj8xPy81NaxFwHmBL3ni_UVjYKFZflyv0",
-      authDomain: "exploridemap.firebaseapp.com",
-      projectId: "exploridemap",
-      storageBucket: "exploridemap.appspot.com",
-      messagingSenderId: "1074659589759",
-      appId: "1:1074659589759:web:f8bdffc15d41d47ac8094a"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const storage = firebase.storage();
     const emojiMap = {};
     emojiList.forEach(e => { emojiMap[e.id] = e.url; });
 
