--- a/migracja_emoji_puste.html
+++ b/migracja_emoji_puste.html
@@ -12,21 +12,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="firebase-init.js"></script>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBj8xPy81NaxFwHmBL3ni_UVjYKFZflyv0",
-      authDomain: "exploridemap.firebaseapp.com",
-      projectId: "exploridemap",
-      storageBucket: "exploridemap.appspot.com",
-      messagingSenderId: "1074659589759",
-      appId: "1:1074659589759:web:f8bdffc15d41d47ac8094a",
-      measurementId: "G-2JHQZ6HXTM"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
     firebase.auth().onAuthStateChanged(user => {
       if (user) {
         log(`✅ Zalogowano jako: ${user.email}`);
